--- a/assets/index.html
+++ b/assets/index.html
@@ -69,43 +69,63 @@
 	var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
 
 	// This parses the computer's guess into an array of letters
-	var computerSplit = []
+	var computerSplit = computerGuess.split("");
+
+	//Setting my missed letters array
+	var missedLetters = [];
+
+	var remaining = computerGuess.length;
 
 	//This turns the letters into dashes
 	for(var i = 0; i < computerGuess.length; i++){
 		computerSplit[i] = "-"
 	};
 
-	var remaining = computerGuess.length
 
-	document.onkeyup = function (event){
-		var userGuess = event.key
-		if ((remaining > 0)&&(down > 0)){
-
-			for (var j = 0; j < computerGuess.length; j++){
-				if (computerGuess[j] === userGuess){
-				computerSplit[j] = userGuess;
-				remaining--;
-				}
-			}	
-		}
-		else if ((remaining === 0) && (down > 0)){
-			wins++
-		}
 	//This displays the letters of the computers guess	
-	document.getElementById("Word").innerHTML = computerSplit.join(" ");
-	//This lowers the counter
-	document.getElementById("NumberGuess").innerHTML = down
-	//This increases the win count
-	document.getElementById("wincount").innerHTML = wins
-	}
-//This displays the letters of the computers guess	
 	document.getElementById("Word").innerHTML = computerSplit.join(" ");
 	
 
+	document.onkeyup = function (event){
+		var userGuess = event.key;
+		var letterfound = false;
+		var letterused = false;
 
+		if ((down > 0) && (remaining > 0)){
+			for (var j = 0; j < computerGuess.length; j++){
+				if (computerGuess[j] === userGuess){
+				computerSplit[j] = userGuess;
+				letterfound = true;
+				remaining--;
+				}
+			}
+			for (var k = 0; k < missedLetters.length; k++){
+				if(missedLetters[k] === userGuess){
+					letterused = true
+				}
+			}
+		}
+		if ((letterfound === false) && (letterused === false)){
+			//This lowers the counter
+			down--;
+			//this adds to the missed letters array
+			missedLetters.push(userGuess)
+			document.getElementById("NumberGuess").innerHTML = down;
+		}
+		if (remaining === 0) {
+			alert("you win!");
+		}
+		if (down === 0) {
+			alert("you lose!")
+		}
 
+	//This adds to the missed letters
+	document.getElementById("guessedLetter").innerHTML = missedLetters
 
+	document.getElementById("Word").innerHTML = computerSplit.join(" ");
+	}
+	//This increases the win count
+	document.getElementById("wincount").innerHTML = wins
 
 </script>
 </html>
