--- a/assets/index.html
+++ b/assets/index.html
@@ -53,7 +53,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 panel panel-primary">
-						<span id="guessedLetter">Misses</span>
+						<span id="guessedLetter">---</span>
 					</div>
 				</div>
 			</div>
