--- a/assets/index.html
+++ b/assets/index.html
@@ -12,8 +12,9 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-4 panel panel-primary">
-				Cubs Image
+			<div class="col-md-4">
+				<img id=winimg src="images/logo.png">
+				<img id=loseimg src="images/umpire.jpg">
 			</div>
 			<div class="col-md-2"></div>
 			<div class="col-md-6">
